clusters/main/kubernetes/system/networkpolicies/app/apiserver-egress-host.ccnp.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-egress-kube-apiserver-nodes
spec:
  endpointSelector:
    matchExpressions:
      - key: "k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name"
        operator: In
        values:
          - arc-system
          - apps
          - authentik
          - blocky
          - cert-manager
          - cloudnative-pg
          - custom-app
          - goldilocks
          - headlamp
          - longhorn-system
          - loki
          - metallb
          - nextcloud
          - openebs
          - paperless
          - spegel
          - snapshot-controller
          - system-upgrade
          - vaultwarden
          - volsync
          - vpa
          - vscode
  egress:
    - toEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP
    - toCIDRSet:
        - cidr: ${KUBERNETES_SERVICE_HOST_CIDR}
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP
